# game-pong-

./: CMakeLists.txt
include/: ball.hpp  game.hpp  paddle.hpp  render.hpp
src/: ball.cpp  game.cpp  main.cpp  paddle.cpp  render.cpp
